# scrag

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml
docs/guides/: development.md
src/scrag/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
